fix graalvm build